--- a/package.json
+++ b/package.json
@@ -13,22 +13,27 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@expo-google-fonts/roboto": "^0.2.2",
+    "@expo/vector-icons": "^13.0.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "^48.0.20",
+    "expo-file-system": "~15.2.2",
     "expo-font": "~10.2.0",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.0",
     "native-base": "^3.4.16",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.45.2",
     "react-native": "0.69.9",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^6.0.2"
   },
