--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@expo-google-fonts/roboto": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
+    "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -35,7 +36,8 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.18.7",
-    "styled-components": "^6.0.2"
+    "styled-components": "^6.0.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
