--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "expo": "^48.0.20",
+    "expo": "^49.0.9",
     "expo-file-system": "~15.2.2",
     "expo-font": "~10.2.0",
     "expo-image-picker": "~14.1.1",
@@ -43,7 +44,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
-    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "~4.3.5"
   },
   "private": true
