--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "expo": "^49.0.9",
+    "expo": "^44.0.6",
     "expo-file-system": "~15.2.2",
     "expo-font": "~10.2.0",
     "expo-image-picker": "~14.1.1",
