--- a/package.json
+++ b/package.json
@@ -9,42 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@callstack/react-theme-provider": "^3.0.8",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@expo-google-fonts/roboto": "^0.2.2",
-    "@expo/vector-icons": "^13.0.0",
-    "@hookform/resolvers": "^3.1.1",
-    "@mui/icons-material": "^5.14.1",
-    "@mui/material": "^5.14.1",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "expo": "^44.0.6",
-    "expo-file-system": "~15.2.2",
+    "@hookform/resolvers": "^2.9.8",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^1.1.3",
+    "expo": "~47.0.0",
+    "expo-file-system": "~14.1.0",
     "expo-font": "~10.2.0",
-    "expo-image-picker": "~14.1.1",
+    "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
     "native-base": "^3.4.16",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-hook-form": "^7.45.2",
-    "react-native": "0.69.9",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-hook-form": "^7.36.1",
+    "react-native": "0.69.5",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
-    "react-native-svg-transformer": "^1.0.0",
-    "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.18.7",
-    "styled-components": "^6.0.2",
-    "yup": "^1.2.0"
+    "yup": "^0.32.11",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
-    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
   },
   "private": true
